--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <canvas id="canvas" width="700" height="700"> </canvas>
+    <button id="Kn">Knight</button>
+    <button id="Dr">Dwarf</button>
+    <button id="El">Elf</button>
     <script src="manager/canvas.js"></script>
     <script src="main.js"></script>
     <script src="shape/rect.js"></script>
+    <script src="manager/rectManager.js"></script>
+
 </body>
 </html>
