add generation of random obstacles and add buttons Knight/Dwarf/Elf

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>game board</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
     <canvas id="canvas" width="700" height="700"> </canvas>
     <button id="Kn">Knight</button>
-    <button id="Dr">Dwarf</button>
+    <button id="Dw">Dwarf</button>
     <button id="El">Elf</button>
+
     <script src="manager/canvas.js"></script>
-    <script src="main.js"></script>
     <script src="shape/rect.js"></script>
     <script src="manager/rectManager.js"></script>
-
-</body>
+    <script src="main.js"></script>
+  </body>
 </html>
